<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>com.codecool.javaee</groupId>
   <artifactId>enterprise-project</artifactId>
   <version>1.0-SNAPSHOT</version>

   <properties>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
       <version.java>1.7</version.java>
       <version.eclipselink>2.6.2</version.eclipselink>
       <version.hibernate.validator>5.1.2.Final</version.hibernate.validator>
       <version.el>3.0.1-b03</version.el>
       <version.postgres>42.1.1</version.postgres>
       <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
       <version.maven.processor.plugin>2.2.4</version.maven.processor.plugin>
       <version.junit>4.11</version.junit>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>org.eclipse.persistence</groupId>-->
            <!--<artifactId>org.eclipse.persistence.jpa</artifactId>-->
            <!--<version>${version.eclipselink}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.persistence</groupId>-->
            <!--<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>-->
            <!--<version>${version.eclipselink}</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>5.2.10.Final</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>org.hibernate</groupId>-->
            <!--<artifactId>hibernate-validator</artifactId>-->
            <!--<version>${version.hibernate.validator}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.el</artifactId>
            <version>${version.el}</version>
        </dependency>

        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>

        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf</artifactId>
            <version>3.0.9.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${version.postgres}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.8.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.8.2</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.0</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.12.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <!--<plugin>-->
            <!--<groupId>org.bsc.maven</groupId>-->
            <!--<artifactId>maven-processor-plugin</artifactId>-->
            <!--<version>${version.maven.processor.plugin}</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<id>process</id>-->
            <!--<goals>-->
            <!--<goal>process</goal>-->
            <!--</goals>-->
            <!--<phase>generate-sources</phase>-->
            <!--<configuration>-->
            <!--<processors>-->
            <!--<processor>org.eclipse.persistence.internal.jpa.modelgen.CanonicalModelProcessor</processor>-->
            <!--</processors>-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.4.5.v20170502</version>
                <configuration>
                    <reload>automatic</reload>
                    <scanIntervalSeconds>1</scanIntervalSeconds>
                    <httpConnector>
                        <port>8888</port>
                    </httpConnector>
                    <loginServices>
                        <loginService implementation="org.eclipse.jetty.security.HashLoginService">
                            <name>Java EE Login</name>
                            <config>${project.basedir}/src/webapp/WEB-INF/web.xml</config>
                        </loginService>
                    </loginServices>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
